test and welcome components deleted, hello component changed, note component added, navbar added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
+<h3>{{title}}</h3>
+<nav>
+  <a routerLink="/hello">Hello</a> |
+  <a routerLink="/login">Login</a> |
+  <a routerLink="/note">Note</a> |
+  <a routerLink="/hello-restricted">Hello (restricted)</a>
+</nav>
 <router-outlet></router-outlet>
