--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,16 @@
-<h3>{{title}}</h3>
-<nav>
-  <a routerLink="/hello">Hello</a> |
-  <a routerLink="/login">Login</a> |
-  <a routerLink="/note">Note</a> |
-  <a routerLink="/hello-restricted">Hello (restricted)</a>
-</nav>
+<h3 class="m-2">Demo - Angular with JWT authentication</h3>
+<ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav nav-pills m-2">
+  <li [ngbNavItem]="1">
+    <a routerLink="/hello" ngbNavLink>Hello</a>
+  </li>
+  <li [ngbNavItem]="2" [disabled]="disabled">
+    <a routerLink="/login" ngbNavLink>Login</a>
+  </li>
+  <li [ngbNavItem]="3">
+    <a routerLink="/note" ngbNavLink>Note</a>
+  </li>
+  <li [ngbNavItem]="4" [disabled]="disabled">
+    <a routerLink="/hello-restricted" ngbNavLink>Hello (restricted)</a>
+  </li>
+</ul>
 <router-outlet></router-outlet>
