--- a/src/app/hello/hello.component.html
+++ b/src/app/hello/hello.component.html
@@ -1,1 +1,12 @@
-<div class="m-2">{{hello.text}}</div>
+<div class="m-2" *ngIf="hello$ | async as hello; else loadingOrError">
+  {{ hello.text }}
+</div>
+
+<ng-template #loadingOrError>
+  <ng-container *ngIf="error; else loading">
+      <div class="alert alert-danger">ERROR</div>
+  </ng-container>
+  <ng-template #loading>
+    <div>Loading ...</div>
+  </ng-template>
+</ng-template>
