--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,7 +8,7 @@
   <li [ngbNavItem]="2" [disabled]="disabled">
     <a routerLink="/login" ngbNavLink>Login</a>
   </li>
-  <li [ngbNavItem]="3" [disabled]="disabled">
+  <li [ngbNavItem]="3">
     <a routerLink="/hello-restricted" ngbNavLink>Hello (restricted)</a>
   </li>
   <li [ngbNavItem]="4">
