login component added, login service adjusted

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,7 +5,7 @@
   <li [ngbNavItem]="1">
     <a routerLink="/hello" ngbNavLink>Hello</a>
   </li>
-  <li [ngbNavItem]="2" [disabled]="disabled">
+  <li [ngbNavItem]="2">
     <a routerLink="/login" ngbNavLink>Login</a>
   </li>
   <li [ngbNavItem]="3">
