logged in user info moved to navbar + refresh after login

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,1 @@
-<h3 class="m-2">Demo - Angular with JWT authentication</h3>
-
-  <div class="m-2" *ngIf="userInfo$ | async as userInfo; else loadingOrError">
-    Logged in as user "{{ userInfo.username }}".
-  </div>
-
-  <ng-template #loadingOrError>
-    <ng-container *ngIf="error; else loading">
-        <div class="alert alert-danger">NOT LOGGED IN</div>
-    </ng-container>
-    <ng-template #loading>
-      <div>Loading ...</div>
-    </ng-template>
-  </ng-template>
+<p class="m-2">Home page</p>
