--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,26 +7,22 @@
   <li [ngbNavItem]="1">
     <a routerLink="/hello" ngbNavLink>Hello</a>
   </li>
-  <li [ngbNavItem]="2">
+  <li [ngbNavItem]="2" *ngIf="isLoggedIn()">
     <a routerLink="/hello-restricted" ngbNavLink>Hello (restricted)</a>
   </li>
-  <li [ngbNavItem]="3">
+  <li [ngbNavItem]="3" *ngIf="isLoggedIn()">
     <a routerLink="/note" ngbNavLink>Note (restricted)</a>
   </li>
   <li [ngbNavItem]="4">
-    <a routerLink="/login" ngbNavLink>Login</a>
+    <span [ngSwitch]="isLoggedIn()">
+      <a *ngSwitchCase="false" routerLink="/login" ngbNavLink>Log in</a>      
+      <a *ngSwitchDefault (click)="logout()" ngbNavLink>Log out</a>
+    </span>
   </li>
 </ul>
 
-<div class="m-2 alert-success" *ngIf="userInfo$ | async as userInfo; else loadingOrError">
+<div class="m-2 alert-success" *ngIf="userInfo$ | async as userInfo">
   Logged in as user "{{ userInfo.username }}".
 </div>
 
-<ng-template #loadingOrError>
-  <ng-container *ngIf="error; else loading">
-    <div class="alert alert-warning">NOT LOGGED IN</div>
-  </ng-container>
-  <ng-template #loading>
-    <div>Loading ...</div>
-  </ng-template>
-</ng-template>
+<div *ngIf="!isLoggedIn()" class="alert alert-warning">NOT LOGGED IN</div>
