--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,7 +6,7 @@
   <button class="btn btn-primary" (click)="useDefaultCredentials()">
     Use default credentials
   </button>
-  <form class="form" (ngSubmit)="login()" [formGroup]="loginForm">
+  <form class="form" (ngSubmit)="logIn()" [formGroup]="loginForm">
     <div class="form-group">
       <label for="username">Username</label>
       <input type="text" class="form-control" formControlName="username" />
