location.reload removed, current user moved from navbar to home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,6 @@
 <p class="m-2">Home page</p>
+<div class="m-2 alert-success" *ngIf="isLoggedIn()">
+  Logged in as user "{{ userInfo.username }}".
+</div>
+
+<div *ngIf="!isLoggedIn()" class="alert alert-warning">NOT LOGGED IN</div>
