--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -1,6 +1,6 @@
-<div class="m-2" *ngIf="notes$ | async as notes; else loadingOrError">
-  <p>Notes</p>
-  <div class="table-responsive">
+<div class="m-2 bg-light" *ngIf="notes$ | async as notes; else loadingOrError">
+  <h2>Notes</h2>
+  <div class="table-responsive" *ngIf="notes.length > 0; else notFound">
     <table class="table table-sm">
       <thead>
       <tr>
@@ -16,11 +16,14 @@
       </tbody>
     </table>
   </div>
+  <ng-template #notFound>
+    <div class="alert alert-warning">No records found.</div>
+  </ng-template>
 </div>
 
 <ng-template #loadingOrError>
   <ng-container *ngIf="error; else loading">
-      <div class="alert alert-danger">ERROR: {{ error }}</div>
+      <div class="alert alert-danger">{{ error }}</div>
   </ng-container>
   <ng-template #loading>
     <div>Loading ...</div>
