css formatting unified, login unsubscribe

--- a/src/app/hello-restricted/hello-restricted.component.html
+++ b/src/app/hello-restricted/hello-restricted.component.html
@@ -1,12 +1,15 @@
-<div class="m-2" *ngIf="hello$ | async as hello; else loadingOrError">
-  {{ hello.text }}
-</div>
+<div class="mb-2 p-3">
+  <h2>Hello (restricted)</h2>
+  <div *ngIf="hello$ | async as hello; else loadingOrError">
+    {{ hello.text }}
+  </div>
 
-<ng-template #loadingOrError>
-  <ng-container *ngIf="error; else loading">
-      <div class="alert alert-danger">{{ error }}</div>
-  </ng-container>
-  <ng-template #loading>
-    <div>Loading ...</div>
+  <ng-template #loadingOrError>
+    <ng-container *ngIf="error; else loading">
+        <div class="alert alert-danger">{{ error }}</div>
+    </ng-container>
+    <ng-template #loading>
+      <div>Loading ...</div>
+    </ng-template>
   </ng-template>
-</ng-template>
+</div>
