bootstrap formatting changed, ng-bootstrap removed, navbar changed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 <daja-navbar></daja-navbar>
-<router-outlet></router-outlet>
+<div class="mb-2 p-3 bg-light">
+  <div class="bg-white mb-2 p-3">
+    <router-outlet></router-outlet>
+  </div>
+</div>
