--- a/src/app/currency-code/currency-code.component.html
+++ b/src/app/currency-code/currency-code.component.html
@@ -1,4 +1,7 @@
 <h2>Currency Codes</h2>
+<div>
+  <button class="btn btn-primary" routerLink="/currency-code/add">Add New Currency Code</button>
+</div>
 <div *ngIf="currencyCodes$ | async as currencyCodes; else loadingOrError">
   <div class="table-responsive-sm" *ngIf="currencyCodes.length > 0; else notFound">
     <table class="table table-sm">
