exchange rate add form added

--- a/src/app/currency-code-detail/currency-code-detail.component.html
+++ b/src/app/currency-code-detail/currency-code-detail.component.html
@@ -32,7 +32,7 @@
     <div class="alert alert-warning">No record found.</div>
   </ng-template>
   <div>
-    <button class="btn btn-primary" routerLink="/" disabled>Add Exchange Rate</button>
+    <button class="btn btn-primary" routerLink="exchange-rate/add">Add Exchange Rate</button>
   </div>
 </div>
 
