--- a/src/app/currency-code-detail/currency-code-detail.component.html
+++ b/src/app/currency-code-detail/currency-code-detail.component.html
@@ -34,6 +34,9 @@
   <div>
     <button class="btn btn-primary" routerLink="exchange-rate/add">Add Exchange Rate</button>
   </div>
+  <div>
+    <button class="btn btn-primary" [routerLink]="['/exchange-rate','currency-code',currencyCode.id]">Show Exchange Rates</button>
+  </div>
 </div>
 
 <ng-template #loadingOrError>
