login buttons changed

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,12 +2,16 @@
 <div class="alert alert-danger" *ngIf="loginError">
   <strong>Failed to login!</strong> Please check your username and password.
 </div>
-<button class="btn btn-primary" (click)="logInWithGoogle()">
-  Log In With Google
-</button>
-<button class="btn btn-primary" (click)="useDefaultCredentials()">
-  Use default credentials
-</button>
+<div>
+  <button class="btn btn-primary" (click)="logInWithGoogle()">
+    Log In With Google
+  </button>
+</div>
+<div>
+  <button class="btn btn-outline-primary" (click)="useDefaultCredentials()">
+    Use default credentials
+  </button>
+</div>
 <form class="form" (ngSubmit)="logIn()" [formGroup]="loginForm">
   <div class="form-group">
     <label for="username">Username</label>
