admin users component added

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -18,6 +18,9 @@
         <li class="nav-item" *ngIf="isLoggedIn()">
           <a routerLink="/exchange-rate" class="nav-link" routerLinkActive="active">Exchange Rate</a>
         </li>
+        <li class="nav-item" *ngIf="isLoggedIn()">
+          <a routerLink="/admin/users" class="nav-link" routerLinkActive="active">Admin - Users</a>
+        </li>
         <li class="nav-item">
           <span [ngSwitch]="isLoggedIn()">
             <a *ngSwitchCase="false" routerLink="/login" class="nav-link" routerLinkActive="active">Log in</a>
