--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -9,6 +9,7 @@
           <th scope="col">Previous Login</th>
           <th scope="col">Given Name</th>
           <th scope="col">Family Name</th>
+          <th scole="col">Roles</th>
         </tr>
       </thead>
       <tbody>
@@ -18,6 +19,9 @@
           <td>{{ user.previousLoginDateTime | date:'yyyy-MM-dd HH:mm' }}</td>
           <td>{{ user.givenName }}</td>
           <td>{{ user.familyName }}</td>
+          <td>
+            <span *ngFor="let userRoles of user.userRoles">{{ userRoles.role.name }}</span>
+          </td>
         </tr>
       </tbody>
     </table>
