--- a/src/app/exchange-rate-currency-code/exchange-rate-currency-code.component.html
+++ b/src/app/exchange-rate-currency-code/exchange-rate-currency-code.component.html
@@ -11,6 +11,7 @@
           <th scope="col">Rate Qty</th>
           <th scope="col">Rate Date</th>
           <th scope="col">Rate</th>
+          <th scope="col">Detail</th>
         </tr>
       </thead>
       <tbody>
@@ -20,6 +21,7 @@
           <td>{{ exchangeRate.currencyCode.rateQty }}</td>
           <td>{{ exchangeRate.rateDate }}</td>
           <td>{{ exchangeRate.rate }}</td>
+          <td><a [routerLink]="['/exchange-rate', exchangeRate.id, 'detail']">DETAIL</a></td>
         </tr>
       </tbody>
     </table>
