exchange rate detail + delete

--- a/src/app/exchange-rate-currency-code/exchange-rate-currency-code.component.html
+++ b/src/app/exchange-rate-currency-code/exchange-rate-currency-code.component.html
@@ -19,7 +19,7 @@
           <td>{{ exchangeRate.currencyCode.country }}</td>
           <td>{{ exchangeRate.currencyCode.currencyCode }}</td>
           <td>{{ exchangeRate.currencyCode.rateQty }}</td>
-          <td>{{ exchangeRate.rateDate }}</td>
+          <td>{{ exchangeRate.rateDate | date:'d.M.yyyy' }}</td>
           <td>{{ exchangeRate.rate }}</td>
           <td><a [routerLink]="['/exchange-rate', exchangeRate.id, 'detail']">DETAIL</a></td>
         </tr>
