user edit added

--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -36,7 +36,7 @@
       </tbody>
     </table>
     <div>
-      <button class="btn btn-primary m-1" [routerLink]="['/user', user.id, 'edit']">Edit</button>
+      <button class="btn btn-primary m-1" routerLink="/user/edit">Edit</button>
       <button class="btn btn-primary m-1" (click)="deleteUser()">Delete</button>
     </div>
   </div>
